# zkverify-example-typescript

./: .env.testnet  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
groth16/circuit/: witness.wtns
src/: config.json  index.ts  setup.sh  test.ts  types.ts
src/boojum/: Cargo.toml  README.md
src/boojum/src/: main.rs
src/common/generate-proof/: index.ts
src/common/proof-utils/: index.ts
src/common/snark-handler/: index.ts
src/data/: boojum.ts  fflonk.ts  groth16.ts  risc0.ts
src/fflonk/: types.ts
src/fflonk/circuit/: circuit.circom  input.json
src/fflonk/circuit/proof/: proof.json
src/fflonk/circuit/zkey/: verification_key.json
src/fflonk/handler/: index.ts
src/fflonk/utils/: index.ts
src/groth16/circuit/proof/: proof.json  public.json
src/groth16/circuit/zkey/: circuit_0000.zkey  circuit_0001.zkey  circuit_0002.zkey  circuit_final.zkey  verification_key.json
src/groth16/handler/: index.ts
src/helpers/: index.ts
src/proofs/: index.ts
src/risc0/: Cargo.toml  README.md
src/risc0/handler/: index.ts
src/risc0/host/: Cargo.toml
src/risc0/methods/: Cargo.toml  build.rs
src/risc0/methods/guest/: Cargo.toml
src/send-proof/: index.ts
src/setup-scripts/: common.sh  setup_boojum.sh  setup_fflonk.sh  setup_groth16.sh  setup_powers_of_tau.sh  setup_risc0.sh
src/transactions/: index.ts
src/utils/helpers/: index.ts
src/utils/transactions/: index.ts
