[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
multiply-methods = { path = "../methods" }
risc0-zkvm = { version = "1.0.4" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0.32", features = ["derive"] }
serde = "1.0"
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
chrono = "0.4"